<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="200dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:id="@+id/editEmailLogin"
            android:hint="@string/enter_your_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/editPasswordLogin"
            android:hint="@string/enter_your_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:id="@+id/btnLogin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"/>

    </LinearLayout>


</RelativeLayout>